--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,12 @@ repositories {
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-//    runtimeOnly 'com.mysql:mysql-connector-j'
+    implementation 'org.hibernate:hibernate-spatial'
+    implementation 'org.locationtech.jts:jts-core:1.18.2'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
