--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,11 +1,12 @@
-spring.datasource.url=jdbc:h2:mem:building_test_db
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=test
+spring.datasource.url=jdbc:mysql:/localhost:3306/building_db_test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=test
+spring.datasource.password=testServerPassword
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.flyway.enabled=true
-spring.flyway.baseline-on-migrate=true
+#spring.flyway.enabled=true
+#spring.flyway.baseline-on-migrate=true
