--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql:/localhost:3306/building_db_test
+spring.datasource.url=jdbc:mysql://localhost:3306/building_db_test
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=test
 spring.datasource.password=testServerPassword
