--- a/build.gradle
+++ b/build.gradle
@@ -19,15 +19,32 @@ repositories {
 
 dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.32'
+
     annotationProcessor 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api:2.1.1'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.hibernate:hibernate-spatial:6.6.18.Final'
     implementation 'org.locationtech.jts:jts-core:1.18.2'
     implementation 'org.flywaydb:flyway-mysql'
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+
     runtimeOnly 'com.mysql:mysql-connector-j'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/generated'
+}
+
+configurations {
+    querydsl.extendsFrom annotationProcessor
 }
 
 tasks.named('test') {
