--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,12 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.hibernate:hibernate-spatial:6.6.18.Final'
     implementation 'org.locationtech.jts:jts-core:1.18.2'
     implementation 'org.flywaydb:flyway-mysql'
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 
     runtimeOnly 'com.mysql:mysql-connector-j'
 
