--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
+
+rate-limiter.read.read-per-second=100
+rate-limiter.read.generate-per-second=10
+rate-limiter.write.write-per-second=10
+rate-limiter.write.generate-per-second=1
